--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,34 +1,40 @@
 @charset "UTF-8";
 /* CSS Document */
 
-#innerGallery{
-		width:780px;
-		height:780px;
-		background-color:;
-	}
-
-.thumb{
-	width:248px;
-	height:248px;
+#innerGallery
+{
+	width:960px;
+	height:720px;
+/*	background-color:black;
+*/}
+.thumb
+{
+	width:240px;
+	height:240px;
 	display:inline-block;
-	}
-.shift{
-	margin-left:13px;
-	}
-.down{
-	margin-top:14px;
-	}			
-	
-.brighten img {
+	padding: 0px 0px 0px 0px;
+}
+.shift
+{
+	margin-left:-5px;
+}
+.shiftUp
+{
+	margin-top:-3px;
+}
+		
+.brighten img:hover {
   -webkit-transition: all .5s ease;
      -moz-transition: all .5s ease;
        -o-transition: all .5s ease;
       -ms-transition: all .5s ease;
           transition: all .5s ease;
+		    -webkit-filter: opacity(1);
+
 }
  
-.brighten img:hover {
-  -webkit-filter: sepia(0);
-  -webkit-filter: drop-shadow(7px 7px 20px black);
-}
+
+.brighten img {	
+  -webkit-filter: opacity(.7);
+}*/
 	
