--- a/css/gallery.css
+++ b/css/gallery.css
@@ -24,11 +24,11 @@
 }
 		
 .brighten img:hover {
-  -webkit-transition: all .5s ease;
-     -moz-transition: all .5s ease;
-       -o-transition: all .5s ease;
-      -ms-transition: all .5s ease;
-          transition: all .5s ease;
+  -webkit-transition: all 0s ease;
+     -moz-transition: all 0s ease;
+       -o-transition: all 0s ease;
+      -ms-transition: all 0s ease;
+          transition: all 0s ease;
 		    -webkit-filter: opacity(1);
 
 }
