--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,17 +3,20 @@
 
 #innerGallery
 {
-	width:960px;
-	height:720px;
+	max-width:1300px;
+	min-width:700px;
+	width:100%;
+	height:auto;
 /*	background-color:black;
 */}
 .thumb
 {
-	width:240px;
-	height:240px;
+	width:25%;
 	display:inline-block;
 	padding: 0px 0px 0px 0px;
 }
+.thumb img
+{width:100%;}
 .shift
 {
 	margin-left:-5px;
